Update codegen for MC 1.21.5